portfolio page problem solve

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 
 <head>
-    <p lang="en"></p>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
@@ -35,7 +34,7 @@
 <body>
     <!-- Navigation Bar Starts -->
     <header>
-        <section id="nav-bg" class="portfolio-bg">
+        <section id="nav-bg">
             <div class="container">
                 <nav class="navbar navbar-expand-lg navbar-light" id="navbar-example">
                     <a class="navbar-brand" href="#">
